# translate_demo

./: .cursorignore  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  __init__.py  advanced_rag_results.json  cleanup_old_implementation.py  comprehensive_test_report.md  comprehensive_test_summary.md  config.example.yaml  config.yaml  deepseek_query_results.json  docker-compose.yml  docker-run.sh  gcs_demo_results.json  generation_test_results.json  install_test_dependencies.sh  notion_query_system.py  notion_storage_test_results.json  orchestrator_patch.py  pyproject.toml  query_results.json  rag_demo_results.json  rag_integration_test_results.json  rag_test_report.md  requirements.txt  run.py  run_api.py  run_final_testing.py  run_final_testing.sh  run_kb_api.sh  sa_chunk_0.tmp.json  setup_notion_database.py  siliconflow_query_results.json  test_advanced_rag.py  test_complete_generation_system.py  (+11 more)
.cursor/rules/: cursor-memory-bank-rules.mdc  project-guidelines.mdc
.github/workflows/: main.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
docs/: api_reference.md  architecture.md  best_practices_guide.md  citation.md  configuration.md  configuration_guide.md  consolidated_design.md  developer_guide.md  development.md  development_plan.md  gcs_setup.md  google_drive_service_account_setup.md  google_drive_setup.md  knowledge_agent_design.md  knowledge_base_multi_agent_design.md  memory_storage_guide.md  metadata_extraction.md  notion_storage_guide.md  old.md  prompt_templates.md  quality_control.md  quick_start_tutorial.md  quickstart.md  release_process.md  retrieval_hallucination_mitigation.md  technical_documentation.md  troubleshooting_guide.md  user_guide.md  任务清单.md  实施计划.md  统一知识库系统需求文档.md  项目代码整理分析报告.md  项目结构规划.md
examples/: README.md  api_demo.py  api_server.py  api_server_example.py  citation_demo.py  debug_rag_demo.py  deepseek_query_demo.py  docker_deployment.sh  google_drive_auth.py  knowledge_base.py  knowledge_base_example.py  memory_store_persistence_demo.py  multi_agent_system.py  prompt_template_demo.py  quality_control_demo.py  quick_start.py  run_advanced_features_demo.py  run_demo.py  run_gcs_demo.py  run_google_drive_demo.py  run_google_drive_service_account_demo.py  run_multimodal_demo.py  run_rag_demo.py  siliconflow_query_demo.py  simple_api_server.py  simple_example.py  simple_gcs_demo.py  simple_staging_test.py  standalone_api.html  standalone_api.py  storage_provider_demo.py  test_deepseek_rag.py  test_rag_with_20_samples.py  test_rag_with_math_samples.py  test_semantic_rag.py  websocket_client.html  websocket_client.py
front/: package-lock.json  package.json
k8s/: configmap.yaml  deployment.yaml  pvc.yaml  secrets.yaml  service.yaml
knowledge_base/: README.md  __init__.py
memory-bank/: activeContext.md  progress.md  projectbrief.md  techContext.md
scripts/: cleanup_code.py  cleanup_examples.py  create_release.py  generate_api_docs.py  install_dev.sh  release.sh
src/: knowledge_base_api.py  knowledge_base_rest_api.py  llm_core.py  main.py
tests/: __init__.py  conftest.py  manual_test_context_manager.py  standalone_test_context_manager.py  test_api.py  test_knowledge_base_agents.py  test_llm.py  test_llm_new.py  test_version.py
(+325 files in other folders)
