[tool.poetry]
authors = ["costa <costa9293@gmail.com>"]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
]
description = "My Awesome Project!"
license = "MIT"
name = "translate_demo"
readme = "README.md"
version = "0.1.0"

packages = [
  {include = "llm_core", from = "src"},
  {include = "tools", from = "src"},
  {include = "agents", from = "src"},
  {include = "translate_demo", from = "src"},
]

[tool.poetry.dependencies]
aiohttp = "^3.12.4"
click = "^8.2.1"
dynaconf = "^3.2.11"
langchain = "^0.3.25"
langchain-core = "^0.3.60"
langchain-deepseek = "^0.1.3"
langchain-ollama = "^0.3.3"
langchain-openai = "^0.3.18"
ollama = "^0.4.8"
openai = "^1.12.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
python = "^3.11"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
mkdocs = "^1.4.3"
mkdocs-material = "^8.5.11"
pre-commit = "^3.3.2"
pylint = "^2.17.4"
pytest-pylint = "^0.19.0"
tox = "^4.5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
python_files = "tests.py test_*.py *_tests.py"
testpaths = "tests"

[tool.poetry.scripts]
translate = "translate_demo.cmd:run"
translate_demo = "translate_demo.cmdline:main"

[tool.pylint.design]
max-line-length = 120
