[tool.poetry]
authors = ["costa <costa9293@gmail.com>"]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
]
description = "My Awesome Project!"
license = "MIT"
name = "unified_knowledge_base"
readme = "README.md"
version = "0.1.0"

packages = [
  {include = "llm_core", from = "src"},
  {include = "tools", from = "src"},
  {include = "agents", from = "src"},
  {include = "translate_demo", from = "src"},
  {include = "knowledge_base", from = "src"},
  {include = "src"},
]

[tool.poetry.dependencies]
aiohttp = "^3.12.4"
click = ">=7.1,<8.2"
dynaconf = "^3.2.11"
langchain = "^0.3.25"
langchain-core = "^0.3.60"
langchain-deepseek = "^0.1.3"
langchain-ollama = "^0.3.3"
langchain-openai = "^0.3.18"
numpy = "^2.3.1"
ollama = "^0.4.8"
openai = "^1.12.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
python = "^3.11"
python-dotenv = "^1.0.0"
tiktoken = "^0.9.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
gTTS = "^2.5.1"
httpx = {extras = ["socks"], version = "^0.28.1"}
google-api-python-client = "^2.176.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.2"
google-cloud-storage = "^3.2.0"
sentence-transformers = "^2.2.2"
chromadb = "^0.4.22"
notion-client = "^2.2.1"
pydantic = "^2.5.2"
tenacity = "^8.2.3"
psutil = "^5.9.8"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
mkdocs = "^1.4.3"
mkdocs-material = "^8.5.11"
pre-commit = "^3.3.2"
pylint = "^2.17.4"
pytest-pylint = "^0.19.0"
tox = "^4.5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
python_files = "tests.py test_*.py *_tests.py"
testpaths = "tests"

[tool.poetry.scripts]
translate = "translate_demo.cmd:run"
translate_demo = "translate_demo.cmdline:main"
translate_api = "translate_demo.api:main"

[tool.pylint.design]
max-line-length = 120
